--- a/index.html
+++ b/index.html
@@ -60,5 +60,17 @@
           </div>
 
     </section>
+
+<!-- my slide show-->
+<div id="slide_show">
+    <div class="slide_w">
+      <div class="slide"><img src="photos\1.jpg"></div>
+      <div class="slide"><img src="photos\2.jpg"></div>
+      <div class="slide"><img src="photos\3.jpg"></div>
+      <div class="slide"><img src="photos\4.jpg"></div>
+      <div class="slide"><img src="photos\5.jpg"></div>
+    </div>
+  </div>
+<!-- my slide show (end) -->
 </body>
 </html>
