--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>eduvive.uz</title>
 </head>
@@ -23,15 +20,32 @@
             </ul>
         </nav>
        <!-- my slide show-->
-        <div id="slide_show">
-            <div class="slide_w">
-                <div class="slide"><img src="photos\1.jpg"></div>
-                <div class="slide"><img src="photos\2.jpg"></div>
-                <div class="slide"><img src="photos\3.jpg"></div>
-                <div class="slide"><img src="photos\4.jpg"></div>
-                <div class="slide"><img src="photos\5.jpg"></div>
+        <div id="slide_show">  
+            <div class="back-slideshow">
+                <div>
+                    <img src="photos\1.jpg" > 
+                </div>
+                <div>
+                    <img src="photos\2.jpg" > 
+                </div>
+                <div>
+                    <img src="photos\3.jpg" >
+                </div>
+                <div>
+                    <img src="photos\4.jpg" > 
+                </div>
+                <div>
+                    <img src="photos\5.jpg" > 
+                </div>
             </div>
-         </div>
+            <div class="front-slideshow">
+                <div><img src="photos\1.jpg" > </div>
+                <div><img src="photos\2.jpg" > </div>
+                <div><img src="photos\3.jpg" > </div>
+                <div><img src="photos\4.jpg" > </div>
+                <div><img src="photos\5.jpg" > </div>
+            </div>
+        </div>
         <!-- my slide show (end) -->
     </section>
 
@@ -84,16 +98,6 @@
         </div>
     </section>
 
-<!-- my slide show-->
-<div id="slide_show">
-    <div class="slide_w">
-      <div class="slide"><img src="photos\1.jpg"></div>
-      <div class="slide"><img src="photos\2.jpg"></div>
-      <div class="slide"><img src="photos\3.jpg"></div>
-      <div class="slide"><img src="photos\4.jpg"></div>
-      <div class="slide"><img src="photos\5.jpg"></div>
-    </div>
-  </div>
-<!-- my slide show (end) -->
+
 </body>
 </html>
