--- a/index.html
+++ b/index.html
@@ -22,21 +22,11 @@
        <!-- my slide show-->
         <div id="slide_show">  
             <div class="back-slideshow">
-                <div>
-                    <img src="photos\1.jpg" > 
-                </div>
-                <div>
-                    <img src="photos\2.jpg" > 
-                </div>
-                <div>
-                    <img src="photos\3.jpg" >
-                </div>
-                <div>
-                    <img src="photos\4.jpg" > 
-                </div>
-                <div>
-                    <img src="photos\5.jpg" > 
-                </div>
+                <div><img src="photos\1.jpg"></div>
+                <div><img src="photos\2.jpg"></div>
+                <div><img src="photos\3.jpg"></div>
+                <div><img src="photos\4.jpg"></div>
+                <div><img src="photos\5.jpg"></div>
             </div>
             <div class="front-slideshow">
                 <div><img src="photos\1.jpg" > </div>
