--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         </div>
     </section>
 
-     <!-- <script type="text/javascript" src="vanilla-tilt.js"></script>
+     <script type="text/javascript" src="js/vanilla-tilt.js"></script>
     <script>
-        VanillaTilt.init(document.querySelectorAll(".about-card"), {
+        VanillaTilt.init(document.querySelectorAll(".course-card"), {
             max: 25,
             speed: 400
         });
-    </script>  -->
+    </script> 
 </body>
 </html>
