swiper js failed

--- a/index.html
+++ b/index.html
@@ -93,12 +93,42 @@
         </div>
     </section>
 
-     <script type="text/javascript" src="js/vanilla-tilt.js"></script>
+    <section id="team">
+        <div class="team-title">
+            <h1>Meet Our Team!</h1>
+            <p>In Eduvive Learning Center, there are 12 professional teachers.<br>
+            Besides we have our manager who is building this website<br>
+             and administrator with our CEO.</p>
+        </div>
+
+        <div class="team">
+            <div class="team-card">
+                <div class="team-image"><img src="photos\reserve\3.png"></div>
+                <div class="team-info"></div>
+            </div>
+            <div class="team-card">
+                <div class="team-image"><img src="photos\reserve\3.png"></div>
+                <div class="team-info"></div>
+            </div>
+            <div class="team-card">
+                <div class="team-image"><img src="photos\reserve\3.png"></div>
+                <div class="team-info"></div>
+            </div>
+            <div class="team-card">
+                <div class="team-image"><img src="photos\reserve\3.png"></div>
+                <div class="team-info"></div>
+            </div>
+        </div>
+        
+    </section>
+
+    <script type="text/javascript" src="js/vanilla-tilt.js"></script>
     <script>
         VanillaTilt.init(document.querySelectorAll(".course-card"), {
             max: 25,
             speed: 400
         });
     </script> 
+    
 </body>
 </html>
