team section added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/e6c29adc13.js" crossorigin="anonymous"></script>
     <title>eduvive.uz</title>
 </head>
 <body>
@@ -95,28 +96,62 @@
 
     <section id="team">
         <div class="team-title">
-            <h1>Meet Our Team!</h1>
-            <p>In Eduvive Learning Center, there are 12 professional teachers.<br>
-            Besides we have our manager who is building this website<br>
-             and administrator with our CEO.</p>
+            <h1>Our Team!</h1>
         </div>
 
         <div class="team">
             <div class="team-card">
-                <div class="team-image"><img src="photos\reserve\3.png"></div>
-                <div class="team-info"></div>
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-image.jpg"></div>
+                <div class="team-header">
+                    <h1>Falonchiyev Pistonchi</h1>
+                    <h3>G'irt Bekorchi</h3>
+                </div>
+                <div class="team-info">
+                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
+                    <div class="team-card-icon">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
             </div>
+
             <div class="team-card">
-                <div class="team-image"><img src="photos\reserve\3.png"></div>
-                <div class="team-info"></div>
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-image.jpg"></div>
+                <div class="team-header">
+                    <h1>Falonchiyev Pistonchi</h1>
+                    <h3>G'irt Bekorchi</h3>
+                </div>
+                <div class="team-info">
+                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
+                    <div class="team-card-icon">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
             </div>
+
             <div class="team-card">
-                <div class="team-image"><img src="photos\reserve\3.png"></div>
-                <div class="team-info"></div>
-            </div>
-            <div class="team-card">
-                <div class="team-image"><img src="photos\reserve\3.png"></div>
-                <div class="team-info"></div>
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-image.jpg"></div>
+                <div class="team-header">
+                    <h1>Falonchiyev Pistonchi</h1>
+                    <h3>G'irt Bekorchi</h3>
+                </div>
+                <div class="team-info">
+                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
+                    <div class="team-card-icon">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
         
