--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="shortcut icon" href="photos/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/e6c29adc13.js" crossorigin="anonymous"></script>
@@ -13,6 +14,7 @@
     <nav>
         <div class="logo"><a href="#home"><img src="photos/logo.png" alt="" srcset=""></a></div>
         <ul>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#team">Team</a></li>
@@ -153,6 +155,25 @@
                     </div>
                 </div>
             </div>
+
+            <div class="team-card">
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-image.jpg"></div>
+                <div class="team-header">
+                    <h1>Falonchiyev Pistonchi</h1>
+                    <h3>G'irt Bekorchi</h3>
+                </div>
+                <div class="team-info">
+                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
+                    <div class="team-card-icon">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
+            </div>
+      
         </div>
         
     </section>
