--- a/index.html
+++ b/index.html
@@ -185,6 +185,6 @@
             speed: 400
         });
     </script> 
-    
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
