nav text animations&some edits added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="photos/logo.png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,550&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -19,8 +19,8 @@
         <div class="logo"><a href="#home"><img src="photos/logo.png" alt="" srcset=""></a></div>
         <div class="nav-line">
             <p>Growth to a bright future!</p>
-            <p>O'qi va biz bilan rivojlan!</p>
-            <p>Учись и развивайся вместе с нами!</p>
+            <p>Trust the Process!</p>
+            <p>Live in the moment!</p>
         </div>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -107,7 +107,7 @@
 
     <section id="team" class="swiper-container">
         <div class="team-title">
-            <h1>Our Team!</h1>
+            <h1>Meet Our Team</h1>
         </div>
 
         <div class="team swiper-wrapper">
