404 and contact section added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#team">Team</a></li>
-            <li><a href="#concact">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -242,6 +242,15 @@
         </div>
 
     </section>
+
+    <section id="contact">
+        <div class="contact">
+            <div class="left-contact">
+                <h1>Leave Your Message...</h1>
+            </div>
+            <div class="right-contact"></div>
+        </div>
+    </section>
    
     <script type="text/javascript" src="js/main.js"></script>
 
@@ -272,5 +281,6 @@
             
         });
     </script>
+
 </body>
 </html>
