--- a/index.html
+++ b/index.html
@@ -244,14 +244,37 @@
     </section>
 
     <section id="contact">
-        <div class="contact">
+        <form class="contact">
             <div class="left-contact">
-                <h1>Leave Your Message...</h1>
+                <h1>Contact Us</h1>
+                <p>Feel free to contact any time you want<br> 
+                leave your message here</p>
+                    <input type="text" name="name" id="name" placeholder="Name">
+                    <input type="email" name="email" id="email" placeholder="Email">
+                    <input type="text" name="message" id="message" placeholder="Message">
+                    <input type="button" value="Send">
+                    <span class="yellow-box-1"></span>
+                <span class="yellow-box-2"></span>
             </div>
-            <div class="right-contact"></div>
-        </div>
+            <div class="right-contact">
+                <div><h1>info</h1></div>
+                <div><i class="far fa-envelope"></i><p>eduvivecentre@gmail.com</p></div>
+                <div><i class="fas fa-phone-alt"></i><p>+998956001110</p></div>
+                <div><i class="fas fa-map-marker-alt"></i><p>Bukhara, Uzbekistan</p></div>
+                <div><i class="far fa-clock"></i><p>8:30 - 19:30</p></div>
+            </div>
+        </form>
     </section>
-   
+    
+    <footer>
+        <h1>follow us on social media</h1>
+        <div class="soc-icons">
+            <a href="https://facebook.com/eduvivelc"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com/eduvive_lc"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
+        </div>
+        <p>created by <a href="https://github.com/gfirik">Firdavs Gafurjonov</a></p>
+    </footer>
     <script type="text/javascript" src="js/main.js"></script>
 
     <!-- VanillaTilt -->
