js added+responsive started

--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
     <title>eduvive.uz</title>
 </head>
 <body>
-    <nav>
-        <div class="logo"><a href="#home"><img src="photos/logo.png" alt="" srcset=""></a></div>
-        <div class="nav-line">
+    <nav id="nav">
+        <div class="logo"><a href="#home"><img src="photos/logo.png"></a></div>
+        <div class="nav-line" id="nav-line">
             <p>Growth to a bright future!</p>
             <p>Trust the Process!</p>
             <p>Live in the moment!</p>
         </div>
-        <ul>
+        <ul id="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+        <div class="menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></div>
     </nav>
 
     <section id="home">
