toggle menu added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <div class="menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></div>
+        <div class="menu-btn" id="menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></div>
+        <div class="menu-exit-btn" id="menu-exit-btn" onclick="exitMenu()"><span></span><span></span></div>
     </nav>
 
     <section id="home">
