--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 </head>
 <body>
     <nav id="nav">
-        <div class="logo"><a href="#home"><img src="photos/logo.png"></a></div>
+        <div class="logo"><a href="./index.html"><img src="photos/logo.png"></a></div>
         <div class="nav-line" id="nav-line">
             <p>Growth to a bright future!</p>
             <p>Trust the Process!</p>
             <p>Live in the moment!</p>
         </div>
         <ul id="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#courses">Courses</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="nav-a-list active"><a href="#home">Home</a></li>
+            <li class="nav-a-list"><a href="#about">About</a></li>
+            <li class="nav-a-list"><a href="#courses">Courses</a></li>
+            <li class="nav-a-list"><a href="#team">Team</a></li>
+            <li class="nav-a-list"><a href="#contact">Contact</a></li>
         </ul>
         <div class="menu-btn" id="menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></div>
         <div class="menu-exit-btn" id="menu-exit-btn" onclick="exitMenu()"><span></span><span></span></div>
