--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>Trust the Process!</p>
             <p>Live in the moment!</p>
         </div>
-        <ul id="nav-links" onclick="exitFullMenu()">
+        <ul id="nav-links">
             <li class="nav-a-list active"><a href="#home">Home</a></li>
             <li class="nav-a-list"><a href="#about">About</a></li>
             <li class="nav-a-list"><a href="#courses">Courses</a></li>
