--- a/index.html
+++ b/index.html
@@ -79,28 +79,28 @@
                 <div><img src="photos\code.svg" alt=""/></div>
                 <div class="course-title">
                     <h3>Web Development</h3> <h4>Target: Full Stack</h4>
-                    <p>From the scretch to the advenced level of English</p>
+                    <p>From HTML to the Full Stack developer. You will learn HTML5, CSS3, JavaScript and its frameworks Bootstrap and JQuery!</p>
                 </div>
             </a>
             <a class="course-card">
                 <div><img src="photos\moscow.png" alt=""/></div>
                 <div class="course-title">
                     <h3>Russian</h3> <h4>Target: Native level</h4>
-                    <p>5days per week, 3hours class, intensive learning and effective result</p>
+                    <p>after finishing the study in this course, russians will confuse themselves whether they are real russians or not</p>
                 </div>
             </a>
             <a class="course-card">
                 <div><img src="photos\Eiffel.svg" alt=""/></div>
                 <div class="course-title">
-                    <h3>French</h3> <h4>Target: DELF 2</h4>
-                    <p>5days per week, 3hours class, intensive learning and effective result</p>
+                    <h3>French</h3> <h4>Target: DELF B2</h4>
+                    <p>you will be taught by the teacher who have studied french filology in France</p>
                 </div>
             </a>
             <a class="course-card">
                 <div><img src="photos\math.svg" alt=""/></div>
                 <div class="course-title">
                     <h3>Math</h3> <h4>Target: Entrance to university</h4>
-                    <p>5days per week, 3hours class, intensive learning and effective result</p>
+                    <p>with the professional teacher, you will be able to get 100% result from exams</p>
                 </div>
             </a>
 
@@ -116,18 +116,90 @@
 
             <div class="team-card swiper-slide" >
                 <div class="team-hover"></div>
-                <div class="team-image"><img src="photos\team-image.jpg"></div>
+                <div class="team-image"><img src="photos\team-members\adj.jpg"></div>
                 <div class="team-header">
-                    <h1>Falonchiyev Pistonchi</h1>
-                    <h3>G'irt Bekorchi</h3>
+                    <h1>Alisher Jalilov</h1>
+                    <h3>Founder</h3>
                 </div>
                 <div class="team-info">
-                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
+                    <p>The founder of the company. Director and motivator.</p>
+                    <div class="team-card-icon">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/alisher.djalilov.58"><i class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/dajalilov.alisher/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-card swiper-slide" >
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-members\fg.jpg"></div>
+                <div class="team-header">
+                    <h1>Firdavs Gafurjonov</h1>
+                    <h3>Manager</h3>
+                </div>
+                <div class="team-info">
+                    <p>The leader of the company. Creative and sensible.</p>
+                    <div class="team-card-icon">
+                        <a target="_blank" href="https://www.linkedin.com/in/firdavs-gafurjonov-67855918a/"><i class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/firdavs.gafurjonov"><i class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/firdavsgafurjonov/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.t.me/f_gafurjonov"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-card swiper-slide" >
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-members\raxmedov.jpg"></div>
+                <div class="team-header">
+                    <h1>Ruslan Akhmedov</h1>
+                    <h3>TOPIK Master</h3>
+                </div>
+                <div class="team-info">
+                    <p>Korean teacher and TOPIK tutor.</p>
                     <div class="team-card-icon">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/ruslanakhmedov8182019/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-card swiper-slide" >
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-members\mi.jpg"></div>
+                <div class="team-header">
+                    <h1>Madina Idieva</h1>
+                    <h3>IELTS Instructor</h3>
+                </div>
+                <div class="team-info">
+                    <p>The best ever IELTS instructor in Bukhara. A wonderful person.</p>
+                    <div class="team-card-icon">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/medina.idieva"><i class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/just_alimovna/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="team-card swiper-slide" >
+                <div class="team-hover"></div>
+                <div class="team-image"><img src="photos\team-members\fg.jpg"></div>
+                <div class="team-header">
+                    <h1>Sherzod Shokirov</h1>
+                    <h3>Linguist<br>Russian Expert</h3>
+                </div>
+                <div class="team-info">
+                    <p>The owner of high knowledge in latin languages and russian language.</p>
+                    <div class="team-card-icon">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/sh.er5631/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
                     </div>
                 </div>
             </div>
@@ -136,16 +208,16 @@
                 <div class="team-hover"></div>
                 <div class="team-image"><img src="photos\team-image.jpg"></div>
                 <div class="team-header">
-                    <h1>Falonchiyev Pistonchi</h1>
-                    <h3>G'irt Bekorchi</h3>
+                    <h1>Gulnoz Marupova</h1>
+                    <h3>Administrator<br>French Teacher</h3>
                 </div>
                 <div class="team-info">
-                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
+                    <p>The most beautiful and polite person of our center.</p>
                     <div class="team-card-icon">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/gulnoz.marupova"><i class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="#"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
                     </div>
                 </div>
             </div>
@@ -154,93 +226,20 @@
                 <div class="team-hover"></div>
                 <div class="team-image"><img src="photos\team-image.jpg"></div>
                 <div class="team-header">
-                    <h1>Falonchiyev Pistonchi</h1>
-                    <h3>G'irt Bekorchi</h3>
+                    <h1>Zarnigor Atoeva</h1>
+                    <h3>Korean Expert</h3>
                 </div>
                 <div class="team-info">
-                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
+                    <p>Specialist in the sphere of language tutoring and korean language.</p>
                     <div class="team-card-icon">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="team-card swiper-slide" >
-                <div class="team-hover"></div>
-                <div class="team-image"><img src="photos\team-image.jpg"></div>
-                <div class="team-header">
-                    <h1>Falonchiyev Pistonchi</h1>
-                    <h3>G'irt Bekorchi</h3>
-                </div>
-                <div class="team-info">
-                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
-                    <div class="team-card-icon">
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="team-card swiper-slide" >
-                <div class="team-hover"></div>
-                <div class="team-image"><img src="photos\team-image.jpg"></div>
-                <div class="team-header">
-                    <h1>Falonchiyev Pistonchi</h1>
-                    <h3>G'irt Bekorchi</h3>
-                </div>
-                <div class="team-info">
-                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
-                    <div class="team-card-icon">
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="team-card swiper-slide" >
-                <div class="team-hover"></div>
-                <div class="team-image"><img src="photos\team-image.jpg"></div>
-                <div class="team-header">
-                    <h1>Falonchiyev Pistonchi</h1>
-                    <h3>G'irt Bekorchi</h3>
-                </div>
-                <div class="team-info">
-                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
-                    <div class="team-card-icon">
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="team-card swiper-slide" >
-                <div class="team-hover"></div>
-                <div class="team-image"><img src="photos\team-image.jpg"></div>
-                <div class="team-header">
-                    <h1>Falonchiyev Pistonchi</h1>
-                    <h3>G'irt Bekorchi</h3>
-                </div>
-                <div class="team-info">
-                    <p>Ushbu palonchi g'irt bekorchi bo'lib eduviveda baloyam qilmaydi.</p>
-                    <div class="team-card-icon">
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-                    </div>
+                        <a target="_blank" href="https://www.facebook.com/profile.php?id=100005913008224"><i class="fab fa-facebook-f"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/eduvive_lc/"><i class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
+                    </div>target="_blank" 
                 </div>
             </div>            
 
-           
         </div>
 
     </section>
