--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <a href="https://instagram.com/eduvive_lc"><i class="fab fa-instagram"></i></a>
             <a href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
         </div>
-        <p>created by <a href="https://github.com/gfirik">Firdavs Gafurjonov</a></p>
+        <p>created by <a target="_blank" href="https://github.com/gfirik">Firdavs Gafurjonov</a></p>
     </footer>
     <script type="text/javascript" src="js/main.js"></script>
 
