real images added to team section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
             <div class="team-card swiper-slide" >
                 <div class="team-hover"></div>
-                <div class="team-image"><img src="photos\team-members\fg.jpg"></div>
+                <div class="team-image"><img src="photos\team-members\sher.jpg"></div>
                 <div class="team-header">
                     <h1>Sherzod Shokirov</h1>
                     <h3>Linguist<br>Russian Expert</h3>
@@ -206,7 +206,7 @@
 
             <div class="team-card swiper-slide" >
                 <div class="team-hover"></div>
-                <div class="team-image"><img src="photos\team-image.jpg"></div>
+                <div class="team-image"><img src="photos\team-members\gm.jpg"></div>
                 <div class="team-header">
                     <h1>Gulnoz Marupova</h1>
                     <h3>Administrator<br>French Teacher</h3>
