--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <a target="_blank" href="https://www.facebook.com/profile.php?id=100005913008224"><i class="fab fa-facebook-f"></i></a>
                         <a target="_blank" href="https://www.instagram.com/eduvive_lc/"><i class="fab fa-instagram"></i></a>
                         <a target="_blank" href="https://t.me/eduviveLC"><i class="fab fa-telegram-plane"></i></a>
-                    </div>target="_blank" 
+                    </div> 
                 </div>
             </div>            
 
